syntax = "proto3";

package example.types.v1;

message SomeType {
  string value = 1;
}
